src/expr/src/scalar/snapshots/mz_expr__scalar__func__range_overleft.snap
---
source: src/expr/src/scalar/func.rs
expression: "#[sqlfunc(\n    is_monotone = \"(false, false)\",\n    output_type = \"bool\",\n    is_infix_op = true,\n    sqlname = \"&<\",\n    propagates_nulls = true\n)]\nfn range_overleft<'a>(a: Datum<'a>, b: Datum<'a>) -> Datum<'a> {\n    let l = a.unwrap_range();\n    let r = b.unwrap_range();\n    Datum::from(Range::<Datum<'a>>::overleft(&l, &r))\n}\n"
---
#[derive(
    proptest_derive::Arbitrary,
    Ord,
    PartialOrd,
    Clone,
    Debug,
    Eq,
    PartialEq,
    serde::Serialize,
    serde::Deserialize,
    Hash,
    mz_lowertest::MzReflect
)]
pub struct RangeOverleft;
impl<'a> crate::func::binary::EagerBinaryFunc<'a> for RangeOverleft {
    type Input1 = Datum<'a>;
    type Input2 = Datum<'a>;
    type Output = Datum<'a>;
    fn call(
        &self,
        a: Self::Input1,
        b: Self::Input2,
        temp_storage: &'a mz_repr::RowArena,
    ) -> Self::Output {
        range_overleft(a, b)
    }
    fn output_type(
        &self,
        input_type_a: mz_repr::ColumnType,
        input_type_b: mz_repr::ColumnType,
    ) -> mz_repr::ColumnType {
        use mz_repr::AsColumnType;
        let output = <bool>::as_column_type();
        let propagates_nulls = crate::func::binary::EagerBinaryFunc::propagates_nulls(
            self,
        );
        let nullable = output.nullable;
        output
            .nullable(
                nullable
                    || (propagates_nulls
                        && (input_type_a.nullable || input_type_b.nullable)),
            )
    }
    fn introduces_nulls(&self) -> bool {
        <bool as ::mz_repr::DatumType<'_, ()>>::nullable()
    }
    fn is_infix_op(&self) -> bool {
        true
    }
    fn is_monotone(&self) -> (bool, bool) {
        (false, false)
    }
    fn propagates_nulls(&self) -> bool {
        true
    }
}
impl std::fmt::Display for RangeOverleft {
    fn fmt(&self, f: &mut std::fmt::Formatter) -> std::fmt::Result {
        f.write_str("&<")
    }
}
fn range_overleft<'a>(a: Datum<'a>, b: Datum<'a>) -> Datum<'a> {
    let l = a.unwrap_range();
    let r = b.unwrap_range();
    Datum::from(Range::<Datum<'a>>::overleft(&l, &r))
}
