src/expr/src/scalar/snapshots/mz_expr__scalar__func__repeat_string.snap
---
source: src/expr/src/scalar/func.rs
expression: "#[sqlfunc(sqlname = \"repeat\")]\nfn repeat_string(string: &str, count: i32) -> Result<String, EvalError> {\n    let len = usize::try_from(count).unwrap_or(0);\n    if (len * string.len()) > MAX_STRING_FUNC_RESULT_BYTES {\n        return Err(EvalError::LengthTooLarge);\n    }\n    Ok(string.repeat(len))\n}\n"
---
#[derive(
    proptest_derive::Arbitrary,
    Ord,
    PartialOrd,
    Clone,
    Debug,
    Eq,
    PartialEq,
    serde::Serialize,
    serde::Deserialize,
    Hash,
    mz_lowertest::MzReflect
)]
pub struct RepeatString;
impl<'a> crate::func::binary::EagerBinaryFunc<'a> for RepeatString {
    type Input1 = &'a str;
    type Input2 = i32;
    type Output = Result<String, EvalError>;
    fn call(
        &self,
        a: Self::Input1,
        b: Self::Input2,
        temp_storage: &'a mz_repr::RowArena,
    ) -> Self::Output {
        repeat_string(a, b)
    }
    fn output_type(
        &self,
        input_type_a: mz_repr::SqlColumnType,
        input_type_b: mz_repr::SqlColumnType,
    ) -> mz_repr::SqlColumnType {
        use mz_repr::AsColumnType;
        let output = Self::Output::as_column_type();
        let propagates_nulls = crate::func::binary::EagerBinaryFunc::propagates_nulls(
            self,
        );
        let nullable = output.nullable;
        output
            .nullable(
                nullable
                    || (propagates_nulls
                        && (input_type_a.nullable || input_type_b.nullable)),
            )
    }
}
impl std::fmt::Display for RepeatString {
    fn fmt(&self, f: &mut std::fmt::Formatter) -> std::fmt::Result {
        f.write_str("repeat")
    }
}
fn repeat_string(string: &str, count: i32) -> Result<String, EvalError> {
    let len = usize::try_from(count).unwrap_or(0);
    if (len * string.len()) > MAX_STRING_FUNC_RESULT_BYTES {
        return Err(EvalError::LengthTooLarge);
    }
    Ok(string.repeat(len))
}
