src/expr/src/scalar/snapshots/mz_expr__scalar__func__strpos.snap
---
source: src/expr/src/scalar/func.rs
expression: "#[sqlfunc()]\nfn strpos(string: &str, substring: &str) -> Result<i32, EvalError> {\n    position(substring, string)\n}\n"
---
#[derive(
    proptest_derive::Arbitrary,
    Ord,
    PartialOrd,
    Clone,
    Debug,
    Eq,
    PartialEq,
    serde::Serialize,
    serde::Deserialize,
    Hash,
    mz_lowertest::MzReflect
)]
pub struct Strpos;
impl crate::func::binary::EagerBinaryFunc for Strpos {
    type Input1<'a> = &'a str;
    type Input2<'a> = &'a str;
    type Output<'a> = Result<i32, EvalError>;
    fn call<'a>(
        &self,
        a: Self::Input1<'a>,
        b: Self::Input2<'a>,
        temp_storage: &'a mz_repr::RowArena,
    ) -> Self::Output<'a> {
        strpos(a, b)
    }
    fn output_type(
        &self,
        input_type_a: mz_repr::SqlColumnType,
        input_type_b: mz_repr::SqlColumnType,
    ) -> mz_repr::SqlColumnType {
        use mz_repr::AsColumnType;
        let output = Self::Output::as_column_type();
        let propagates_nulls = crate::func::binary::EagerBinaryFunc::propagates_nulls(
            self,
        );
        let nullable = output.nullable;
        output
            .nullable(
                nullable
                    || (propagates_nulls
                        && (input_type_a.nullable || input_type_b.nullable)),
            )
    }
}
impl std::fmt::Display for Strpos {
    fn fmt(&self, f: &mut std::fmt::Formatter) -> std::fmt::Result {
        f.write_str(stringify!(strpos))
    }
}
fn strpos(string: &str, substring: &str) -> Result<i32, EvalError> {
    position(substring, string)
}
